tests/testfiles/passing/invalid_identifiers/keyword_as_id_inline.c
/* Keyword as identifier: inline */
int main() {
    int inline;
}